# looking-glass

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
data/: clips_manifest.yaml  demo_queries.yaml  tracks.db
data/checkpoints/: drone01.json  drone02.json  drone03.json  drone04.json  drone05.json  drone06.json
demo/: Looking_Glass_Pitch_Deck.pptx  Looking_Glass_Pitch_Only.html  Looking_Glass_Pitch_Tech_Specs.html  Looking_Glass_Project_Presentation.pptx  Springineering_Project description template (1).pptx
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: download_models.py  e2e_test.py  eval_demo_queries.py  fetch_demo_clips.py  health_check.py  ingest_all.py
src/looking_glass/: __init__.py  config.py
src/looking_glass/alerts/: engine.py
src/looking_glass/analytics/: counter.py
src/looking_glass/api/: deps.py  main.py  schemas.py
src/looking_glass/api/routes/: alerts.py  analytics.py  cameras.py  search.py  settings.py
src/looking_glass/ingestion/: frame_sampler.py  pipeline.py
src/looking_glass/models/: __init__.py  captioner.py  detector.py  embedder.py  tracker.py  vlm_chat.py
src/looking_glass/search/: nl_search.py  reranker.py
src/looking_glass/sources/: base.py  file_source.py  rtsp_source.py  webcam_source.py
src/looking_glass/store/: schemas.py  vector_store.py
tests/: test_api.py  test_pipeline.py  test_sources.py
