[project]
name = "looking-glass"
version = "0.1.0"
description = "Natural language video intelligence — Springineering Challenge 2026"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "pydantic>=2",
    "qdrant-client>=1.12",
    "ultralytics>=8.3",
    "supervision>=0.25",
    "transformers>=4.46",
    "torch>=2.4",
    "torchvision>=0.19",
    "accelerate>=1.0",
    "sentencepiece>=0.2",
    "protobuf>=5",
    "einops>=0.8",
    "timm>=1.0",
    "open-clip-torch>=2.28",
    "eva-decord>=0.6",
    "opencv-python-headless>=4.10",
    "pillow>=10",
    "numpy>=1.26",
    "ollama>=0.4",
    "pyyaml>=6",
    "python-dotenv>=1",
    "typer>=0.12",
    "rich>=13",
    "loguru>=0.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/looking_glass"]
